--- a/CourseSelection/Views/Student/SelectCourse.cshtml
+++ b/CourseSelection/Views/Student/SelectCourse.cshtml
@@ -1,48 +1,4 @@
-﻿@* @using System.Security.Claims
-@model IEnumerable<CourseSelection.Models.Course>
-
-<h2>Kurs Listesi</h2>
-
-@if (TempData["Message"] != null)
-{
-    <div class="alert alert-success">@TempData["Message"]</div>
-}
-
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Kurs Adı</th>
-            <th>Kurs Kodu</th>
-            <th>Kredi</th>
-            <th>Zorunlu mu?</th>
-            <th>İşlem</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var course in Model)
-        {
-            <tr>
-                <td>@course.CourseName</td>
-                <td>@course.CourseCode</td>
-                <td>@course.Credit</td>
-                <td>@(course.IsMandatory ? "Evet" : "Hayır")</td>
-
-                <td>
-                    @using (Html.BeginForm("SelectCourse", "Student", FormMethod.Post))
-                    {
-                        @Html.Hidden("courseId", course.CourseID)
-                        @Html.Hidden("studentId", @User.FindFirst(ClaimTypes.NameIdentifier).Value) <!-- Öğrenci ID'sini gönder -->
-                        <button type="submit" class="btn btn-primary">Seç</button>
-                    }
-
-                </td>
-            </tr>
-        }
-    </tbody>
-</table> *@
-
-
-@model IEnumerable<CourseSelection.Models.Course>
+﻿@model IEnumerable<CourseSelection.Models.Course>
 
 <h2>Kurs Listesi</h2>
 
